--- a/client/main/styles/htmlbody.css
+++ b/client/main/styles/htmlbody.css
@@ -2,7 +2,7 @@
 	font-family: "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
 	line-height: 28px;
 	font-size: 14px;
-	color:#4D4D4C;
+	color: var(--text-color);
 	letter-spacing: 1px;
 	padding:0 20px;
 }
@@ -35,16 +35,16 @@
 	margin-right:auto;
 	/*width:80%;*/
 	width:100%;
-	border:1px solid #E0E0E0;
+	border:1px solid var(--border-color);
 	border-collapse: collapse;
 }
 .htmlBody table th,
 .htmlBody table td{
 	padding: 3px;
-	border:1px solid #E0E0E0;
+	border:1px solid var(--border-color);
 }
 .htmlBody table th{
-	background:#F0F0F0;
+	background: var(--second-background-color);
 }
 
 /*段落*/
@@ -98,16 +98,16 @@
 
 /*代码*/
 .htmlBody code{
-	background:#F0F0F0;
-	padding:0 5px;;
+	background:var(--second-background-color);
+	padding:0 5px;
 	font-family: source-code-pro, Monaco, Menlo, "Ubuntu Mono", Consolas, monospace;
 }
 .htmlBody pre code{
 	/*margin-left:34px;*/
 	margin-bottom: 28px;
 	display: block;
-	background:#fff;
-	border:1px solid #E0E0E0;
+	background: var(--second-background-color);
+	border:1px solid var(--border-color);
 	overflow-x: scroll;
 	font-size: 13px;
 }
@@ -118,7 +118,7 @@
 	margin-bottom: 28px;
 	padding:0 10px;
 	background:#F0F0F0;
-	border-left:3px solid #E0E0E0;
+	border-left:3px solid var(--border-color);
 }
 .htmlBody blockquote p{
 	text-indent: 0;
@@ -127,7 +127,7 @@
 /*图片*/
 .htmlBody img{
 	max-width: 100%;
-	border: 1px solid #E0E0E0;
+	border: 1px solid var(--border-color);
 	padding: 1px;
 }
 /* 附件 */
@@ -173,7 +173,7 @@
 	margin-bottom: .3em;
 }
 .htmlBody .tn-attachment-info .tn-attachment-size{
-	color: #999;
+	color: var(--text-color);
 }
 
 /*链接*/
