--- a/client/main/styles/global.css
+++ b/client/main/styles/global.css
@@ -1,6 +1,7 @@
 *{
     margin:0;
     padding:0;
+    font-family: "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
 }
 html,body{
     height: 100%;
