--- a/client/common/theme/default.css
+++ b/client/common/theme/default.css
@@ -12,25 +12,23 @@
 	--icon-folder-open-url: url(../../main/images/icon-folder-open.png);
 }
 
-@media screen and (prefers-color-scheme: dark) {
-	:root{
-		--background-color: #333;
-		--second-background-color: #1A1A1A;
-		--border-color: #000;
-		--text-color: #999;
-		--second-text-color: #777;
-		--active-background-color: #333;
-		--second-active-background-color: #444;
+:root[data-theme="dark"]{
+	--background-color: #333;
+	--second-background-color: #1A1A1A;
+	--border-color: #000;
+	--text-color: #999;
+	--second-text-color: #777;
+	--active-background-color: #333;
+	--second-active-background-color: #444;
 
-		--icon-file-url: url(../../main/images/icon-file-dark.png);
-		--icon-folder-url: url(../../main/images/icon-folder-dark.png);
-		--icon-folder-open-url: url(../../main/images/icon-folder-open-dark.png);
-	}
-	.ace_editor {
-		background-color: var(--background-color)!important;
-		color: var(--text-color)!important;
-	}
-	.ace_active-line{
-		background-color: var(--second-active-background-color)!important;
-	}
+	--icon-file-url: url(../../main/images/icon-file-dark.png);
+	--icon-folder-url: url(../../main/images/icon-folder-dark.png);
+	--icon-folder-open-url: url(../../main/images/icon-folder-open-dark.png);
+}
+:root[data-theme="dark"] .ace_editor {
+	background-color: var(--background-color)!important;
+	color: var(--text-color)!important;
+}
+:root[data-theme="dark"] .ace_active-line{
+	background-color: var(--second-active-background-color)!important;
 }
